@@ -9,6 +9,7 @@
   - Change in the way local text encoding is dealt with.
 - Update unit tests.
   - Refactor the fixtures.
+- New: API xmp_files_get_format_info().
 
 2.1.1 - 2009/06/30
 
